# iyes2d_editor

./: Cargo.toml  README.md
.github/workflows/: issue2project.yml
assets/: iyes2d_editor.assets
src/: assets.rs  camera.rs  lib.rs  misc.rs  selection.rs  sprite.rs  tilemap.rs  tool.rs  ui.rs
src/ui/: menu.rs  panel.rs  toolbar.rs  tooltip.rs
