[package]
name = "iyes2d_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iyes_loopless = "0.9"
iyes_scene_tools = "0.2"
iyes_bevy_util = { git = "https://github.com/IyesGames/iyes_bevy_util" }
iyes2d_autotilemap = { git = "https://github.com/IyesGames/iyes2d_autotilemap" }
iyes_blueprints = { git = "https://github.com/IyesGames/iyes_blueprints" }
rand = "0.8.5"

[dependencies.bevy]
version = "0.9.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
]

[dependencies.bevy_ecs_tilemap]
version = "0.9"
optional = true

[dependencies.bevy_asset_loader]
version = "0.14"
features = ["stageless", "standard_dynamic_assets"]

[dev-dependencies.bevy]
version = "0.9.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "x11",
    "wayland",
    "png",
]

[dev-dependencies.bevy_ecs_tilemap]
version = "0.9"

[patch."https://github.com/IyesGames/iyes_blueprints"]
iyes_blueprints = { path = "../iyes_blueprints/" }

[patch."https://github.com/IyesGames/iyes2d_autotilemap"]
iyes2d_autotilemap = { path = "../iyes2d_autotilemap/" }
