[package]
name = "iyes2d_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iyes_scene_tools = { git = "https://github.com/IyesGames/iyes_scene_tools" }
iyes_bevy_extras = { git = "https://github.com/IyesGames/iyes_bevy_extras" }
iyes2d_autotilemap = { git = "https://github.com/IyesGames/iyes2d_autotilemap" }
iyes_blueprints = { git = "https://github.com/IyesGames/iyes_blueprints" }
rand = "0.8.5"
enum-iterator = "1.2.0"
parking_lot = "0.12.1"

[dependencies.bevy]
version = "0.10"
default-features = false
features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
]

[dependencies.bevy_ecs_tilemap]
version = "0.10"
optional = true

[dependencies.bevy_asset_loader]
version = "0.15"
features = ["standard_dynamic_assets"]

[dev-dependencies.bevy]
version = "0.10"
default-features = false
features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "x11",
    "wayland",
    "png",
]

[dev-dependencies.bevy_ecs_tilemap]
version = "0.10"

[patch."https://github.com/IyesGames/iyes_bevy_extras"]
iyes_bevy_extras = { path = "../iyes_bevy_extras/" }

[patch."https://github.com/IyesGames/iyes_blueprints"]
iyes_blueprints = { path = "../iyes_blueprints/" }

[patch."https://github.com/IyesGames/iyes2d_autotilemap"]
iyes2d_autotilemap = { path = "../iyes2d_autotilemap/" }
